# lge

./: .clang-format  .clang-tidy  .gitattributes  .gitmodules  CLAUDE.md  CMakeLists.txt  DESIGN.md  README.md  run_clang-format.sh  todo.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  todo.md
.github/workflows/: tests.yml
cmake/: LGEApplication.cmake
examples/: CMakeLists.txt  README.md
examples/01_hello_world/: CMakeLists.txt  README.md  main.cpp
examples/01_hello_world/src/: hello_world.cpp  hello_world.hpp  input.cpp  move_random_system.cpp  move_random_system.hpp  oscillation_system.cpp  oscillation_system.hpp
examples/02_layers/: CMakeLists.txt  README.md
examples/02_layers/src/: layers.cpp  layers.hpp
examples/03_sprites/: CMakeLists.txt  README.md
examples/03_sprites/src/: sprites.cpp  sprites.hpp
examples/04_scenes/: CMakeLists.txt  README.md
examples/04_scenes/src/: actions.hpp  events.hpp  scenes.cpp  scenes.hpp  scenes_game.cpp  scenes_game.hpp
examples/04_scenes/src/scenes/: game_scene.cpp  game_scene.hpp  menu_scene.cpp  menu_scene.hpp
examples/05_collisions/: CMakeLists.txt  README.md
examples/05_collisions/src/: collisions.cpp  collisions.hpp  events.hpp  movement.hpp  movement_system.cpp  movement_system.hpp
examples/05_sound/: CMakeLists.txt  README.md
examples/05_sound/src/: sound.cpp  sound.hpp
examples/06_buttons/: CMakeLists.txt  README.md
examples/06_buttons/src/: buttons.hpp
examples/06_collisions/: CMakeLists.txt  README.md
examples/06_collisions/src/: collisions.cpp  collisions.hpp  dice.hpp  dice_roller_system.cpp  dice_roller_system.hpp  events.hpp  movement_system.cpp  movement_system.hpp
examples/07_buttons/: CMakeLists.txt  README.md
examples/07_buttons/src/: buttons.cpp  buttons.hpp
examples/07_collisions/: CMakeLists.txt  README.md
examples/07_collisions/src/: dice_roller_system.hpp
examples/media/sprites/CuteDice - AssetPack_v1.0/: dices.ftpp
examples/media/sprites/Dancing Girl/: dancer.ftpp
examples/media/sprites/Hiker/: hiker.ftpp
examples/media/sprites/kenney_input-prompts-pixel-16/: input.ftpp
examples/media/sprites/kenney_ui-pack-pixel-adventure/: ui.ftpp
examples/media/sprites/parallax_demon_woods_pack/: background.ftpp
examples/resources/: copy.me
examples/resources/sprites/: background.json  dancer_anim.json  dancer_sheet.json  dices.json  hiker.json  hiker_anim.json  hiker_sheet.json  input.json  sprites.json  ui.json
examples/src/: actions.hpp  example.cpp  example.hpp
examples/web/: site.webmanifest  template.html
include/lge/: app.hpp  app_config.hpp  input.hpp  main.hpp  renderer.hpp  result.hpp
include/lge/app/: app.hpp  app_config.hpp  context.hpp  main.hpp
include/lge/components/: aabb.hpp  button.hpp  clear_on_scene_exit.hpp  clickable.hpp  collidable.hpp  destroy_pending.hpp  dirty.hpp  hidden.hpp  hierarchy.hpp  hovered.hpp  label.hpp  metrics.hpp  order.hpp  panel.hpp  placement.hpp  position.hpp  shapes.hpp  sprite.hpp  sprite_animation.hpp  transform.hpp
include/lge/core/: colors.hpp  log.hpp  result.hpp  types.hpp
include/lge/dispatcher/: dispatcher.hpp  subscription.hpp
include/lge/effects/: oscillator.hpp
include/lge/events/: button_clicked.hpp  click.hpp  collision.hpp
include/lge/interface/: audio_manager.hpp  backend.hpp  input.hpp  renderer.hpp  resource_manager.hpp  resource_store.hpp  resources.hpp
include/lge/raylib/: raylib_renderer.hpp
include/lge/scene/: scene.hpp  scene_manager.hpp
include/lge/systems/: bounds_system.hpp  dirty_propagation_system.hpp  dirty_removal_system.hpp  hidden_system.hpp  hierarchy_system.hpp  label_aabb_system.hpp  metrics_system.hpp  render_system.hpp  system.hpp  transform_system.hpp
include/lge/text/: text_segment.hpp
media/font/Peaberry_Pixel_Font/: peaberry_pixel_outline_16.bmfc
media/font/Peaberry_Pixel_Font/Peaberry Doublespace/: PeaberryDoublespace.eot
media/font/Peaberry_Pixel_Font/Peaberry Monospace/: PeaberryMono.eot
media/font/Peaberry_Pixel_Font/Peaberry Regular Spacing/: Peaberry-Bold.eot
media/sprites/: sprites.ftpp
resources/font/: peaberry_mono.fnt  peaberry_pixel_outline_16.fnt
src/lge/: app.cpp  input.cpp  renderer.cpp
src/lge/app/: app.cpp
src/lge/core/: log.cpp
src/lge/effects/: oscillator.cpp
src/lge/internal/components/: bounds.hpp  effective_hidden.hpp  global_hidden.hpp  metrics.hpp  overlapping.hpp  pressed.hpp  previous_button.hpp  previous_label.hpp  previous_panel.hpp  previous_shapes.hpp  previous_sprite.hpp  previous_sprite_animation.hpp  render_order.hpp  rich_segments.hpp  sprite_animation.cpp  transform.hpp
src/lge/internal/interface/: resource_manager.cpp  resource_manager_animation_library.cpp  resource_manager_sprite_sheet.cpp
src/lge/internal/raylib/: raylib_audio_manager.cpp  raylib_audio_manager.hpp  raylib_backend.cpp  raylib_backend.hpp  raylib_font.cpp  raylib_font.hpp  raylib_input.cpp  raylib_input.hpp  raylib_music.cpp  raylib_music.hpp  raylib_renderer.cpp  raylib_renderer.hpp  raylib_resource_manager.cpp  raylib_resource_manager.hpp  raylib_resource_manager_font.cpp  raylib_resource_manager_texture.cpp  raylib_sound.cpp  raylib_sound.hpp  raylib_texture.cpp  raylib_texture.hpp
src/lge/internal/resource_manager/: animation_library.cpp  animation_library.hpp  resource_store.hpp  (+6 more)
src/lge/raylib/: raylib_input.cpp  raylib_renderer.cpp
src/lge/scene/: scene.cpp  scene_manager.cpp
src/lge/systems/: bounds_system.cpp  dirty_propagation_system.cpp  dirty_removal_system.cpp  hidden_system.cpp  hierarchy_system.cpp  label_aabb_system.cpp  metrics_system.cpp  render_system.cpp  transform_system.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/src/: bounds_system_test.cpp  collision_system_test.cpp  destroy_pending_test.cpp  dispatcher_test.cpp  hidden_system_test.cpp  main_test.cpp  order_system_test.cpp  pivot_hierarchy_test.cpp  result_test.cpp  rich_text_test.cpp  scene_dispatcher_test.cpp  scene_manager_test.cpp  scene_system_test.cpp  test_helpers.hpp  transform_system_test.cpp
(+27 files in other folders)
